<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hartwig.actin</groupId>
    <artifactId>actin</artifactId>
    <packaging>pom</packaging>
    <version>local-SNAPSHOT</version>
    <name>HMF ACTIN</name>

    <modules>
        <module>common</module>
        <module>clinical</module>
        <module>molecular</module>
        <module>treatment</module>
        <module>algo</module>
        <module>report</module>
        <module>database</module>
        <module>system</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <actin.version>1.0</actin.version>
        <serve.version>2.0</serve.version>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
        <maven.exec.plugin.version>3.1.0</maven.exec.plugin.version>

        <google.artifactregistry.version>2.1.0</google.artifactregistry.version>

        <intellij.annotations.version>12.0</intellij.annotations.version>
        <commons.cli.version>1.5.0</commons.cli.version>
        <google.guava.version>31.1-jre</google.guava.version>
        <google.gson.version>2.10</google.gson.version>
        <apache.log4j.version>2.18.0</apache.log4j.version>
        <apache.log4j-slf4j18.version>2.18.0</apache.log4j-slf4j18.version>

        <jooq.version>3.15.2</jooq.version>
        <mysqlconnector.version>8.0.31</mysqlconnector.version>
        <itext.version>7.2.4</itext.version>

        <immutables.version>2.9.2</immutables.version>

        <junit.version>4.13.2</junit.version>
        <assertj-core.version>3.24.2</assertj-core.version>
    </properties>

    <build>
        <extensions>
            <extension>
                <groupId>com.google.cloud.artifactregistry</groupId>
                <artifactId>artifactregistry-maven-wagon</artifactId>
                <version>${google.artifactregistry.version}</version>
            </extension>
        </extensions>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${maven.exec.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jooq</groupId>
                    <artifactId>jooq-codegen-maven</artifactId>
                    <version>${jooq.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>artifact-registry</id>
            <url>artifactregistry://europe-west4-maven.pkg.dev/hmf-build/hmf-maven</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>common</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>clinical</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>molecular</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>treatment</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>database</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>algo</artifactId>
                <version>${actin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>report</artifactId>
                <version>${actin.version}</version>
            </dependency>

            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>datamodel</artifactId>
                <version>${serve.version}</version>
            </dependency>

            <dependency>
                <groupId>com.intellij</groupId>
                <artifactId>annotations</artifactId>
                <version>${intellij.annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commons.cli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${google.gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${apache.log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j18-impl</artifactId>
                <version>${apache.log4j-slf4j18.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooq</groupId>
                <artifactId>jooq</artifactId>
                <version>${jooq.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysqlconnector.version}</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>kernel</artifactId>
                <version>${itext.version}</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>layout</artifactId>
                <version>${itext.version}</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>io</artifactId>
                <version>${itext.version}</version>
            </dependency>

            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${immutables.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.hartwig.actin</groupId>
                <artifactId>common</artifactId>
                <version>${actin.version}</version>
                <scope>test</scope>
                <type>test-jar</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
